disabled links to current page in header menu

--- a/app/about.html
+++ b/app/about.html
@@ -21,7 +21,7 @@
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__list-item">
-                <a class="menu__list-link menu__list-link--active" href="#">About</a>
+                <span class="menu__list-link menu__list-link--active">About</span>
               </li>
               <li class="menu__list-item">
                 <a class="menu__list-link" href="gallery.html">Gallery</a>
@@ -56,8 +56,7 @@
               </a>
               <h4 class="rightside-menu__title">Furniture for life</h4>
               <p class="rightside-menu__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus sunt quod voluptate recusandae sapiente,
-                omnis quidem quibusdam debitis tempora et.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus sunt quod voluptate recusandae sapiente, omnis quidem quibusdam debitis tempora et.
               </p>
               <img class="rightside-menu__image" src="images/rightside-image.jpg" alt="image">
             </div>
