--- a/app/blog.html
+++ b/app/blog.html
@@ -34,7 +34,7 @@
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__list-item">
-                <a class="menu__list-link menu__list-link--active" href="#">Blog</a>
+                <span class="menu__list-link menu__list-link--active">Blog</span>
               </li>
               <li class="menu__list-item">
                 <a class="menu__list-link" href="contact.html">Contact</a>
@@ -76,7 +76,7 @@
               </a>
             </li>
             <li class="breadcrumbs__item">
-              <span class="breadcrumbs__link" href="#">
+              <span class="breadcrumbs__link">
                 Blog
               </span>
             </li>
