--- a/app/gallery.html
+++ b/app/gallery.html
@@ -24,7 +24,7 @@
                 <a class="menu__list-link" href="about.html">About</a>
               </li>
               <li class="menu__list-item">
-                <a class="menu__list-link menu__list-link--active" href="#">Gallery</a>
+                <span class="menu__list-link menu__list-link--active">Gallery</span>
               </li>
             </ul>
           </nav>
@@ -76,7 +76,7 @@
               </a>
             </li>
             <li class="breadcrumbs__item">
-              <span class="breadcrumbs__link" href="#">
+              <span class="breadcrumbs__link">
                 Gallery
               </span>
             </li>
