--- a/app/contact.html
+++ b/app/contact.html
@@ -37,7 +37,7 @@
                 <a class="menu__list-link" href="blog.html">Blog</a>
               </li>
               <li class="menu__list-item">
-                <a class="menu__list-link menu__list-link--active" href="#">Contact</a>
+                <span class="menu__list-link menu__list-link--active">Contact</span>
               </li>
             </ul>
           </nav>
