--- a/app/index.html
+++ b/app/index.html
@@ -25,9 +25,9 @@
               </li>
             </ul>
           </nav>
-          <a class="logo" href="#">
+          <span class="logo">
             <img class="logo__img" src="images/logo.png" alt="logo">
-          </a>
+          </span>
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__list-item">
