started styling blog-page

--- a/app/blog.html
+++ b/app/blog.html
@@ -83,6 +83,143 @@
           </ul>
         </div>
       </div>
+      <!-- === BLOG === -->
+      <section class="blog">
+        <div class="container">
+          <div class="blog__inner">
+            <div class="blog__items">
+              <aside class="aside">
+                <form class="aside__search">
+                  <input class="aside__search-input" type="search" placeholder="Search">
+                  <button class="aside__search-button" type="submit">
+                    <img class="aside__search-icon" src="images/icons/magnifying-glass.svg" alt="magnifying glass icon">
+                  </button>
+                </form>
+                <div class="blog__categories">
+                  <h6 class="blog__categories-title">
+                    Categories
+                  </h6>
+                  <ul class="blog__categories-list">
+                    <li class="blog__categories-item">
+                      <a class="blog__categories-link" href="#">
+                        Dining room (1)
+                      </a>
+                    </li>
+                    <li class="blog__categories-item">
+                      <a class="blog__categories-link" href="#">
+                        Office furniture (12)
+                      </a>
+                    </li>
+                    <li class="blog__categories-item">
+                      <a class="blog__categories-link" href="#">
+                        Simple interiror design (2)
+                      </a>
+                    </li>
+                    <li class="blog__categories-item">
+                      <a class="blog__categories-link" href="#">
+                        Design (4)
+                      </a>
+                    </li>
+                    <li class="blog__categories-item">
+                      <a class="blog__categories-link" href="#">
+                        Bedroom Furniture (1)
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="blog__recent-posts">
+                  <h6 class="blog__recent-posts-title">
+                    Recent Posts
+                  </h6>
+                  <ul class="blog__recent-posts-list">
+                    <li class="blog__recent-posts-item">
+                      <a class="blog__recent-posts-postname" href="#">
+                        Cred selfies edison bulb four dollar toast humblebrag
+                      </a>
+                      <span class="blog__recent-posts-date">
+                        August 29, 2021
+                      </span> |
+                      <a class="blog__recent-posts-author" href="#">
+                        by Ann Summers
+                      </a>
+                    </li>
+                    <li class="blog__recent-posts-item">
+                      <a class="blog__recent-posts-postname" href="#">
+                        Semiotics fixie four dollar toast, next level woke scenester direct trade photo booth
+                      </a>
+                      <span class="blog__recent-posts-date">
+                        August 27, 2021
+                      </span> |
+                      <a class="blog__recent-posts-author" href="#">
+                        by Ann Summers
+                      </a>
+                    </li>
+                    <li class="blog__recent-posts-item">
+                      <a class="blog__recent-posts-postname" href="#">
+                        Cred selfies edison bulb four dollar toast humblebrag
+                      </a>
+                      <span class="blog__recent-posts-date">
+                        August 18, 2021
+                      </span> |
+                      <a class="blog__recent-posts-author" href="#">
+                        by Ann Summers
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="blog__tags">
+                  <h6 class="blog__tags-title">
+                    Tags
+                  </h6>
+                  <a class="blog__tags-link" href="#">
+                    Dining room futniture
+                  </a>
+                  <a class="blog__tags-link" href="#">
+                    Chair
+                  </a>
+                  <a class="blog__tags-link" href="#">
+                    Table
+                  </a>
+                  <a class="blog__tags-link" href="#">
+                    Bedroom
+                  </a>
+                  <a class="blog__tags-link" href="#">
+                    Office Furniture
+                  </a>
+                </div>
+                <ul class="blog__social">
+                  <li class="blog__social-item">
+                    <a class="blog__social-link" href="#">
+                      <img class="blog__social-icon" src="images/icons/facebook.svg" alt="facebook icon">
+                    </a>
+                  </li>
+                  <li class="blog__social-item">
+                    <a class="blog__social-link" href="#">
+                      <img class="blog__social-icon" src="images/icons/instagram.svg" alt="instagram icon">
+                    </a>
+                  </li>
+                  <li class="blog__social-item">
+                    <a class="blog__social-link" href="#">
+                      <img class="blog__social-icon" src="images/icons/pinterest.svg" alt="pinterest icon">
+                    </a>
+                  </li>
+                  <li class="blog__social-item">
+                    <a class="blog__social-link" href="#">
+                      <img class="blog__social-icon" src="images/icons/whatsapp.svg" alt="whatsapp icon">
+                    </a>
+                  </li>
+                  <li class="blog__social-item">
+                    <a class="blog__social-link" href="#">
+                      <img class="blog__social-icon" src="images/icons/youtube.svg" alt="youtube icon">
+                    </a>
+                  </li>
+                </ul>
+              </aside>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- === / BLOG === -->
     </main>
 
     <footer class="footer">
@@ -97,7 +234,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa asperiores at corporis exercitationem et
                 quae.
               </p>
-              <a class="footer__info-email" href="mailto:ouremailaddress@email.com">
+              <a class="footer__info-email email" href="mailto:ouremailaddress@email.com">
                 ouremailaddress@email.com
               </a>
               <form class="footer__form">
