--- a/app/index.html
+++ b/app/index.html
@@ -408,7 +408,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa asperiores at corporis exercitationem et
                 quae.
               </p>
-              <a class="footer__info-email" href="mailto:ouremailaddress@email.com">
+              <a class="footer__info-email email" href="mailto:ouremailaddress@email.com">
                 ouremailaddress@email.com
               </a>
               <form class="footer__form">
