--- a/app/blog.html
+++ b/app/blog.html
@@ -88,7 +88,60 @@
         <div class="container">
           <div class="blog__inner">
             <div class="blog__items">
-
+              <div class="blog__item">
+                <img class="blog__item-image" src="images/content/blog/blog-post-big-1.jpg" alt="blog post image">
+                <div class="blog__item-info">
+                  <span class="blog__item-date">August 15, 2020 | </span>
+                  <a class="blog__item-author" href="#">by Ann Summers | </a>
+                  <a class="blog__item-theme" href="#">Bedroom Furniture</a>
+                </div>
+                <h3 class="blog__item-title">
+                  Red selfies edison bulb four dollar toast humblebrag for the furniture
+                </h3>
+                <p class="blog__item-text">
+                  Everyday carry actually neutra authentic kogi shabby chic migas small batch craft beer. Literally
+                  williamsburg tote bag farm-to-table mustache ugh deep v irony. Af man bun copper mug iPhone enamel pin
+                  pug selvage hammock palo santo godard thundercats coloring book yuccie woke. Ugh pok pok taxidermy
+                  pabst enamel pin edison bulb farm-to-table.
+                </p>
+              </div>
+              <blockquote class="blog__blockquote">
+                “Simplicity is not the goal. It is the by-product of a good idea and modest expectations”
+                <div class="blog__blockquote-author">Paul Rand</div>
+              </blockquote>
+              <div class="blog__item article-pop-up">
+                <div class="article-pop-up__box">
+                  <a class="blog__item-pop-up" data-fancybox href="https://youtu.be/oubc0B25Vn8?t=20">
+                    <img class="blog__pop-up-play-btn" src="images/icons/play-button.svg" alt="play button">
+                  </a>
+                </div>
+                <div class="blog__item-info">
+                  <span class="blog__item-date">August 12, 2021 | </span>
+                  <a class="blog__item-author" href="#">Lux Morningstar | </a>
+                  <a class="blog__item-theme" href="#">Design</a>
+                </div>
+                <h3 class="blog__item-title">
+                  Authentic kogi shabby chic
+                </h3>
+              </div>
+              <div class="blog__item article-slider">
+                <div class="article-slider__box">
+                  <img class="blog__item-image" src="images/content/blog/blog-post-slider-big-1.jpg" alt="blog slider image">
+                  <img class="blog__item-image" src="images/content/blog/blog-post-big-1.jpg" alt="blog slider image">
+                  <img class="blog__item-image" src="images/content/blog/blog-post-video-big-1.jpg" alt="blog slider image">
+                </div>
+                <div class="blog__item-info">
+                  <span class="blog__item-date">August 10, 2021 | </span>
+                  <a class="blog__item-author" href="#">Ann Summers | </a>
+                  <a class="blog__item-theme" href="#">Table Furniture</a>
+                </div>
+                <h3 class="blog__item-title">
+                  Semiotics fixie four dollar toast, next level woke
+                </h3>
+                <p class="blog__item-text">
+                  Everyday carry actually neutra authentic kogi shabby chic migas small batch craft beer. Literally williamsburg tote bag farm-to-table mustache ugh deep v irony. Af man bun copper mug iPhone enamel pin pug selvage hammock palo santo godard thundercats coloring book yuccie woke. Ugh pok pok taxidermy pabst enamel pin edison bulb farm-to-table.
+                </p>
+              </div>
             </div>
             <aside class="aside">
               <form class="aside__search">
