blog-page finished

--- a/app/blog.html
+++ b/app/blog.html
@@ -56,8 +56,7 @@
               </a>
               <h4 class="rightside-menu__title">Furniture for life</h4>
               <p class="rightside-menu__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus sunt quod voluptate recusandae sapiente,
-                omnis quidem quibusdam debitis tempora et.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus sunt quod voluptate recusandae sapiente, omnis quidem quibusdam debitis tempora et.
               </p>
               <img class="rightside-menu__image" src="images/rightside-image.jpg" alt="image">
             </div>
@@ -99,10 +98,7 @@
                   Red selfies edison bulb four dollar toast humblebrag for the furniture
                 </h3>
                 <p class="blog__item-text">
-                  Everyday carry actually neutra authentic kogi shabby chic migas small batch craft beer. Literally
-                  williamsburg tote bag farm-to-table mustache ugh deep v irony. Af man bun copper mug iPhone enamel pin
-                  pug selvage hammock palo santo godard thundercats coloring book yuccie woke. Ugh pok pok taxidermy
-                  pabst enamel pin edison bulb farm-to-table.
+                  Everyday carry actually neutra authentic kogi shabby chic migas small batch craft beer. Literally williamsburg tote bag farm-to-table mustache ugh deep v irony. Af man bun copper mug iPhone enamel pin pug selvage hammock palo santo godard thundercats coloring book yuccie woke. Ugh pok pok taxidermy pabst enamel pin edison bulb farm-to-table.
                 </p>
               </div>
               <blockquote class="blog__blockquote">
@@ -111,6 +107,7 @@
               </blockquote>
               <div class="blog__item article-pop-up">
                 <div class="article-pop-up__box">
+                  <img class="blog__item-image" src="images/content/blog/blog-post-video-big-1.jpg" alt="blog video cover image">
                   <a class="blog__item-pop-up" data-fancybox href="https://youtu.be/oubc0B25Vn8?t=20">
                     <img class="blog__pop-up-play-btn" src="images/icons/play-button.svg" alt="play button">
                   </a>
@@ -141,6 +138,22 @@
                 <p class="blog__item-text">
                   Everyday carry actually neutra authentic kogi shabby chic migas small batch craft beer. Literally williamsburg tote bag farm-to-table mustache ugh deep v irony. Af man bun copper mug iPhone enamel pin pug selvage hammock palo santo godard thundercats coloring book yuccie woke. Ugh pok pok taxidermy pabst enamel pin edison bulb farm-to-table.
                 </p>
+              </div>
+              <div class="pagination">
+                  <a class="pagination__angle pagination__angle--disabled" href="#">
+                    <img class="pagination__angle-icon" src="images/icons/angle-left-pagination.svg" alt="angle left icon">
+                  </a>
+                <ul class="pagination__list">
+                  <li class="pagination__item">
+                    <span class="pagination__item-num pagination__item-num--active">1</span>
+                  </li>
+                  <li class="pagination__item">
+                    <a class="pagination__item-num" href="#">2</a>
+                  </li>
+                </ul>
+                  <a class="pagination__angle" href="#">
+                    <img class="pagination__angle-icon" src="images/icons/angle-right-pagination.svg" alt="angle right icon">
+                  </a>
               </div>
             </div>
             <aside class="aside">
