--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus sunt quod voluptate recusandae sapiente,
                 omnis quidem quibusdam debitis tempora et.
               </p>
-              <img class="rightside-menu__image" src="images/content/rightside-image.jpg" alt="image">
+              <img class="rightside-menu__image" src="images/rightside-image.jpg" alt="image">
             </div>
           </div>
         </div>
