--- a/app/blog.html
+++ b/app/blog.html
@@ -90,13 +90,15 @@
               <div class="blog__item">
                 <img class="blog__item-image" src="images/content/blog/blog-post-big-1.jpg" alt="blog post image">
                 <div class="blog__item-info">
-                  <span class="blog__item-date">August 15, 2020 | </span>
+                  <span class="blog__item-date">August 31, 2021 | </span>
                   <a class="blog__item-author" href="#">by Ann Summers | </a>
                   <a class="blog__item-theme" href="#">Bedroom Furniture</a>
                 </div>
-                <h3 class="blog__item-title">
-                  Red selfies edison bulb four dollar toast humblebrag for the furniture
-                </h3>
+                <a class="blog__item-link" href="#">
+                  <h3 class="blog__item-title">
+                    Red selfies edison bulb four dollar toast humblebrag for the furniture
+                  </h3>
+                </a>
                 <p class="blog__item-text">
                   Everyday carry actually neutra authentic kogi shabby chic migas small batch craft beer. Literally williamsburg tote bag farm-to-table mustache ugh deep v irony. Af man bun copper mug iPhone enamel pin pug selvage hammock palo santo godard thundercats coloring book yuccie woke. Ugh pok pok taxidermy pabst enamel pin edison bulb farm-to-table.
                 </p>
@@ -117,9 +119,11 @@
                   <a class="blog__item-author" href="#">Lux Morningstar | </a>
                   <a class="blog__item-theme" href="#">Design</a>
                 </div>
-                <h3 class="blog__item-title">
-                  Authentic kogi shabby chic
-                </h3>
+                <a class="blog__item-link" href="#">
+                  <h3 class="blog__item-title">
+                    Authentic kogi shabby chic
+                  </h3>
+                </a>
               </div>
               <div class="blog__item article-slider">
                 <div class="article-slider__box">
@@ -132,9 +136,11 @@
                   <a class="blog__item-author" href="#">Ann Summers | </a>
                   <a class="blog__item-theme" href="#">Table Furniture</a>
                 </div>
-                <h3 class="blog__item-title">
-                  Semiotics fixie four dollar toast, next level woke
-                </h3>
+                <a class="blog__item-link" href="#">
+                  <h3 class="blog__item-title">
+                    Semiotics fixie four dollar toast, next level woke
+                  </h3>
+                </a>
                 <p class="blog__item-text">
                   Everyday carry actually neutra authentic kogi shabby chic migas small batch craft beer. Literally williamsburg tote bag farm-to-table mustache ugh deep v irony. Af man bun copper mug iPhone enamel pin pug selvage hammock palo santo godard thundercats coloring book yuccie woke. Ugh pok pok taxidermy pabst enamel pin edison bulb farm-to-table.
                 </p>
