--- a/app/blog.html
+++ b/app/blog.html
@@ -94,7 +94,7 @@
                   <a class="blog__item-author" href="#">by Ann Summers | </a>
                   <a class="blog__item-theme" href="#">Bedroom Furniture</a>
                 </div>
-                <a class="blog__item-link" href="#">
+                <a class="blog__item-link" href="blog-one.html">
                   <h3 class="blog__item-title">
                     Red selfies edison bulb four dollar toast humblebrag for the furniture
                   </h3>
@@ -115,7 +115,7 @@
                   </a>
                 </div>
                 <div class="blog__item-info">
-                  <span class="blog__item-date">August 12, 2021 | </span>
+                  <span class="blog__item-date">August 20, 2021 | </span>
                   <a class="blog__item-author" href="#">Lux Morningstar | </a>
                   <a class="blog__item-theme" href="#">Design</a>
                 </div>
