finished media for header

--- a/app/page.html
+++ b/app/page.html
@@ -46,6 +46,11 @@
               <div class="header__btn-link--lines"></div>
             </a>
           </button>
+          <button class="header__button-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
           <div class="rightside-menu rightside-menu--close">
             <button class="rightside-menu__close">
               <img src="images/icons/close-btn.svg" alt="close button">
@@ -97,7 +102,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa asperiores at corporis exercitationem et
                 quae.
               </p>
-              <a class="footer__info-email" href="mailto:ouremailaddress@email.com">
+              <a class="footer__info-email email" href="mailto:ouremailaddress@email.com">
                 ouremailaddress@email.com
               </a>
               <form class="footer__form">
