made adaptive for header & footer

--- a/app/about.html
+++ b/app/about.html
@@ -46,6 +46,11 @@
               <div class="header__btn-link--lines"></div>
             </a>
           </button>
+          <button class="header__button-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
           <div class="rightside-menu rightside-menu--close">
             <button class="rightside-menu__close">
               <img src="images/icons/close-btn.svg" alt="close button">
