--- a/app/page.html
+++ b/app/page.html
@@ -82,7 +82,7 @@
             </li>
             <li class="breadcrumbs__item">
               <a class="breadcrumbs__link" href="#">
-                About
+                Page
               </a>
             </li>
           </ul>
