--- a/app/about.html
+++ b/app/about.html
@@ -37,7 +37,7 @@
                 <a class="menu__list-link" href="blog.html">Blog</a>
               </li>
               <li class="menu__list-item">
-                <a class="menu__list-link" href="contact.html">Contact</a>
+                <a class="menu__list-link menu__list-link--line" href="contact.html">Contact</a>
               </li>
             </ul>
           </nav>
