--- a/app/blog.html
+++ b/app/blog.html
@@ -37,7 +37,7 @@
                 <span class="menu__list-link menu__list-link--active">Blog</span>
               </li>
               <li class="menu__list-item">
-                <a class="menu__list-link" href="contact.html">Contact</a>
+                <a class="menu__list-link menu__list-link--line" href="contact.html">Contact</a>
               </li>
             </ul>
           </nav>
