back to how it was before (slider in contact.html)

--- a/app/contact.html
+++ b/app/contact.html
@@ -159,186 +159,186 @@
       <!-- === CONTACT-SLIDER === -->
       <div class="container-fluid">
         <div class="contact-slider">
-          <div class="contact-slider__item">
+          <a class="contact-slider__link" href="#">
             <img class="contact-slider__image" src="images/content/contact-page/slider/1.jpg" alt="Living room category">
-            <a class="contact-slider__link" href="#">
+            <p class="contact-slider__title">
               Living room furniture
-            </a>
-          </div>
-          <div class="contact-slider__item">
+            </p>
+          </a>
+          <a class="contact-slider__link" href="#">
             <img class="contact-slider__image" src="images/content/contact-page/slider/2.jpg" alt="Office category">
-            <a class="contact-slider__link" href="#">
+            <p class="contact-slider__title">
               Office furniture
-            </a>
-          </div>
-          <div class="contact-slider__item">
+            </p>
+          </a>
+          <a class="contact-slider__link" href="#">
             <img class="contact-slider__image" src="images/content/contact-page/slider/3.jpg" alt="Living room category">
-            <a class="contact-slider__link" href="#">
+            <p class="contact-slider__title">
               Living room furniture
-            </a>
-          </div>
-          <div class="contact-slider__item">
+            </p>
+          </a>
+          <a class="contact-slider__link" href="#">
             <img class="contact-slider__image" src="images/content/contact-page/slider/4.jpg" alt="Kitchen category">
-            <a class="contact-slider__link" href="#">
+            <p class="contact-slider__title">
               Kitchen
-            </a>
-          </div>
-          <div class="contact-slider__item">
+            </p>
+          </a>
+          <a class="contact-slider__link" href="#">
             <img class="contact-slider__image" src="images/content/contact-page/slider/5.jpg" alt="Living room category">
-            <a class="contact-slider__link" href="#">
+            <p class="contact-slider__title">
               Living room furniture
-            </a>
-          </div>
-          <div class="contact-slider__item">
+            </p>
+          </a>
+          <a class="contact-slider__link" href="#">
             <img class="contact-slider__image" src="images/content/contact-page/slider/6.jpg" alt="Living room category">
-            <a class="contact-slider__link" href="#">
+            <p class="contact-slider__title">
               Living room furniture
-            </a>
-          </div>
-          <div class="contact-slider__item">
+            </p>
+          </a>
+          <a class="contact-slider__link" href="#">
             <img class="contact-slider__image" src="images/content/contact-page/slider/7.jpg" alt="Dining room category">
-            <a class="contact-slider__link" href="#">
+            <p class="contact-slider__title">
               Dining room furniture
-            </a>
-          </div>
-          <div class="contact-slider__item">
+            </p>
+          </a>
+          <a class="contact-slider__link" href="#">
             <img class="contact-slider__image" src="images/content/contact-page/slider/8.jpg" alt="Living room category">
-            <a class="contact-slider__link" href="#">
+            <p class="contact-slider__title">
               Living room furniture
-            </a>
-          </div>
-          <div class="contact-slider__item">
+            </p>
+          </a>
+          <a class="contact-slider__link" href="#">
             <img class="contact-slider__image" src="images/content/contact-page/slider/9.jpg" alt="Chair category">
-            <a class="contact-slider__link" href="#">
+            <p class="contact-slider__title">
               Chair
-            </a>
-          </div>
-          <div class="contact-slider__item">
+            </p>
+          </a>
+          <a class="contact-slider__link" href="#">
             <img class="contact-slider__image" src="images/content/contact-page/slider/10.jpg" alt="Bedroom category">
-            <a class="contact-slider__link" href="#">
+            <p class="contact-slider__title">
               Bedroom furniture
-            </a>
-          </div>
-          <div class="contact-slider__item">
+            </p>
+          </a>
+          <a class="contact-slider__link" href="#">
             <img class="contact-slider__image" src="images/content/contact-page/slider/1.jpg" alt="Living room category">
-            <a class="contact-slider__link" href="#">
+            <p class="contact-slider__title">
               Living room furniture
-            </a>
-          </div>
-          <div class="contact-slider__item">
+            </p>
+          </a>
+          <a class="contact-slider__link" href="#">
             <img class="contact-slider__image" src="images/content/contact-page/slider/2.jpg" alt="Office category">
-            <a class="contact-slider__link" href="#">
+            <p class="contact-slider__title">
               Office furniture
-            </a>
-          </div>
-          <div class="contact-slider__item">
+            </p>
+          </a>
+          <a class="contact-slider__link" href="#">
             <img class="contact-slider__image" src="images/content/contact-page/slider/3.jpg" alt="Living room category">
-            <a class="contact-slider__link" href="#">
+            <p class="contact-slider__title">
               Living room furniture
-            </a>
-          </div>
-          <div class="contact-slider__item">
+            </p>
+          </a>
+          <a class="contact-slider__link" href="#">
             <img class="contact-slider__image" src="images/content/contact-page/slider/4.jpg" alt="Kitchen category">
-            <a class="contact-slider__link" href="#">
+            <p class="contact-slider__title">
               Kitchen
-            </a>
-          </div>
-          <div class="contact-slider__item">
+            </p>
+          </a>
+          <a class="contact-slider__link" href="#">
             <img class="contact-slider__image" src="images/content/contact-page/slider/5.jpg" alt="Living room category">
-            <a class="contact-slider__link" href="#">
+            <p class="contact-slider__title">
               Living room furniture
-            </a>
-          </div>
-          <div class="contact-slider__item">
+            </p>
+          </a>
+          <a class="contact-slider__link" href="#">
             <img class="contact-slider__image" src="images/content/contact-page/slider/6.jpg" alt="Living room category">
-            <a class="contact-slider__link" href="#">
+            <p class="contact-slider__title">
               Living room furniture
-            </a>
-          </div>
-          <div class="contact-slider__item">
+            </p>
+          </a>
+          <a class="contact-slider__link" href="#">
             <img class="contact-slider__image" src="images/content/contact-page/slider/7.jpg" alt="Dining room category">
-            <a class="contact-slider__link" href="#">
+            <p class="contact-slider__title">
               Dining room furniture
-            </a>
-          </div>
-          <div class="contact-slider__item">
+            </p>
+          </a>
+          <a class="contact-slider__link" href="#">
             <img class="contact-slider__image" src="images/content/contact-page/slider/8.jpg" alt="Living room category">
-            <a class="contact-slider__link" href="#">
+            <p class="contact-slider__title">
               Living room furniture
-            </a>
-          </div>
-          <div class="contact-slider__item">
+            </p>
+          </a>
+          <a class="contact-slider__link" href="#">
             <img class="contact-slider__image" src="images/content/contact-page/slider/9.jpg" alt="Chair category">
-            <a class="contact-slider__link" href="#">
+            <p class="contact-slider__title">
               Chair
-            </a>
-          </div>
-          <div class="contact-slider__item">
+            </p>
+          </a>
+          <a class="contact-slider__link" href="#">
             <img class="contact-slider__image" src="images/content/contact-page/slider/10.jpg" alt="Bedroom category">
-            <a class="contact-slider__link" href="#">
+            <p class="contact-slider__title">
               Bedroom furniture
-            </a>
-          </div>
-          <div class="contact-slider__item">
+            </p>
+          </a>
+          <a class="contact-slider__link" href="#">
             <img class="contact-slider__image" src="images/content/contact-page/slider/1.jpg" alt="Living room category">
-            <a class="contact-slider__link" href="#">
+            <p class="contact-slider__title">
               Living room furniture
-            </a>
-          </div>
-          <div class="contact-slider__item">
+            </p>
+          </a>
+          <a class="contact-slider__link" href="#">
             <img class="contact-slider__image" src="images/content/contact-page/slider/2.jpg" alt="Office category">
-            <a class="contact-slider__link" href="#">
+            <p class="contact-slider__title">
               Office furniture
-            </a>
-          </div>
-          <div class="contact-slider__item">
+            </p>
+          </a>
+          <a class="contact-slider__link" href="#">
             <img class="contact-slider__image" src="images/content/contact-page/slider/3.jpg" alt="Living room category">
-            <a class="contact-slider__link" href="#">
+            <p class="contact-slider__title">
               Living room furniture
-            </a>
-          </div>
-          <div class="contact-slider__item">
+            </p>
+          </a>
+          <a class="contact-slider__link" href="#">
             <img class="contact-slider__image" src="images/content/contact-page/slider/4.jpg" alt="Kitchen category">
-            <a class="contact-slider__link" href="#">
+            <p class="contact-slider__title">
               Kitchen
-            </a>
-          </div>
-          <div class="contact-slider__item">
+            </p>
+          </a>
+          <a class="contact-slider__link" href="#">
             <img class="contact-slider__image" src="images/content/contact-page/slider/5.jpg" alt="Living room category">
-            <a class="contact-slider__link" href="#">
+            <p class="contact-slider__title">
               Living room furniture
-            </a>
-          </div>
-          <div class="contact-slider__item">
+            </p>
+          </a>
+          <a class="contact-slider__link" href="#">
             <img class="contact-slider__image" src="images/content/contact-page/slider/6.jpg" alt="Living room category">
-            <a class="contact-slider__link" href="#">
+            <p class="contact-slider__title">
               Living room furniture
-            </a>
-          </div>
-          <div class="contact-slider__item">
+            </p>
+          </a>
+          <a class="contact-slider__link" href="#">
             <img class="contact-slider__image" src="images/content/contact-page/slider/7.jpg" alt="Dining room category">
-            <a class="contact-slider__link" href="#">
+            <p class="contact-slider__title">
               Dining room furniture
-            </a>
-          </div>
-          <div class="contact-slider__item">
+            </p>
+          </a>
+          <a class="contact-slider__link" href="#">
             <img class="contact-slider__image" src="images/content/contact-page/slider/8.jpg" alt="Living room category">
-            <a class="contact-slider__link" href="#">
+            <p class="contact-slider__title">
               Living room furniture
-            </a>
-          </div>
-          <div class="contact-slider__item">
+            </p>
+          </a>
+          <a class="contact-slider__link" href="#">
             <img class="contact-slider__image" src="images/content/contact-page/slider/9.jpg" alt="Chair category">
-            <a class="contact-slider__link" href="#">
+            <p class="contact-slider__title">
               Chair
-            </a>
-          </div>
-          <div class="contact-slider__item">
+            </p>
+          </a>
+          <a class="contact-slider__link" href="#">
             <img class="contact-slider__image" src="images/content/contact-page/slider/10.jpg" alt="Bedroom category">
-            <a class="contact-slider__link" href="#">
+            <p class="contact-slider__title">
               Bedroom furniture
-            </a>
-          </div>
+            </p>
+          </a>
         </div>
       </div>
       <!-- === / CONTACT-SLIDER === -->
