found solution for slider in contact.html

--- a/app/contact.html
+++ b/app/contact.html
@@ -159,186 +159,67 @@
       <!-- === CONTACT-SLIDER === -->
       <div class="container-fluid">
         <div class="contact-slider">
-          <a class="contact-slider__link" href="#">
+          <div class="contact-slider__item">
             <img class="contact-slider__image" src="images/content/contact-page/slider/1.jpg" alt="Living room category">
-            <p class="contact-slider__title">
+            <a class="contact-slider__link" href="#">
               Living room furniture
-            </p>
-          </a>
-          <a class="contact-slider__link" href="#">
+            </a>
+          </div>
+          <div class="contact-slider__item">
             <img class="contact-slider__image" src="images/content/contact-page/slider/2.jpg" alt="Office category">
-            <p class="contact-slider__title">
+            <a class="contact-slider__link" href="#">
               Office furniture
-            </p>
-          </a>
-          <a class="contact-slider__link" href="#">
+            </a>
+          </div>
+          <div class="contact-slider__item">
             <img class="contact-slider__image" src="images/content/contact-page/slider/3.jpg" alt="Living room category">
-            <p class="contact-slider__title">
+            <a class="contact-slider__link" href="#">
               Living room furniture
-            </p>
-          </a>
-          <a class="contact-slider__link" href="#">
+            </a>
+          </div>
+          <div class="contact-slider__item">
             <img class="contact-slider__image" src="images/content/contact-page/slider/4.jpg" alt="Kitchen category">
-            <p class="contact-slider__title">
+            <a class="contact-slider__link" href="#">
               Kitchen
-            </p>
-          </a>
-          <a class="contact-slider__link" href="#">
+            </a>
+          </div>
+          <div class="contact-slider__item">
             <img class="contact-slider__image" src="images/content/contact-page/slider/5.jpg" alt="Living room category">
-            <p class="contact-slider__title">
+            <a class="contact-slider__link" href="#">
               Living room furniture
-            </p>
-          </a>
-          <a class="contact-slider__link" href="#">
+            </a>
+          </div>
+          <div class="contact-slider__item">
             <img class="contact-slider__image" src="images/content/contact-page/slider/6.jpg" alt="Living room category">
-            <p class="contact-slider__title">
+            <a class="contact-slider__link" href="#">
               Living room furniture
-            </p>
-          </a>
-          <a class="contact-slider__link" href="#">
+            </a>
+          </div>
+          <div class="contact-slider__item">
             <img class="contact-slider__image" src="images/content/contact-page/slider/7.jpg" alt="Dining room category">
-            <p class="contact-slider__title">
+            <a class="contact-slider__link" href="#">
               Dining room furniture
-            </p>
-          </a>
-          <a class="contact-slider__link" href="#">
+            </a>
+          </div>
+          <div class="contact-slider__item">
             <img class="contact-slider__image" src="images/content/contact-page/slider/8.jpg" alt="Living room category">
-            <p class="contact-slider__title">
+            <a class="contact-slider__link" href="#">
               Living room furniture
-            </p>
-          </a>
-          <a class="contact-slider__link" href="#">
+            </a>
+          </div>
+          <div class="contact-slider__item">
             <img class="contact-slider__image" src="images/content/contact-page/slider/9.jpg" alt="Chair category">
-            <p class="contact-slider__title">
+            <a class="contact-slider__link" href="#">
               Chair
-            </p>
-          </a>
-          <a class="contact-slider__link" href="#">
+            </a>
+          </div>
+          <div class="contact-slider__item">
             <img class="contact-slider__image" src="images/content/contact-page/slider/10.jpg" alt="Bedroom category">
-            <p class="contact-slider__title">
+            <a class="contact-slider__link" href="#">
               Bedroom furniture
-            </p>
-          </a>
-          <a class="contact-slider__link" href="#">
-            <img class="contact-slider__image" src="images/content/contact-page/slider/1.jpg" alt="Living room category">
-            <p class="contact-slider__title">
-              Living room furniture
-            </p>
-          </a>
-          <a class="contact-slider__link" href="#">
-            <img class="contact-slider__image" src="images/content/contact-page/slider/2.jpg" alt="Office category">
-            <p class="contact-slider__title">
-              Office furniture
-            </p>
-          </a>
-          <a class="contact-slider__link" href="#">
-            <img class="contact-slider__image" src="images/content/contact-page/slider/3.jpg" alt="Living room category">
-            <p class="contact-slider__title">
-              Living room furniture
-            </p>
-          </a>
-          <a class="contact-slider__link" href="#">
-            <img class="contact-slider__image" src="images/content/contact-page/slider/4.jpg" alt="Kitchen category">
-            <p class="contact-slider__title">
-              Kitchen
-            </p>
-          </a>
-          <a class="contact-slider__link" href="#">
-            <img class="contact-slider__image" src="images/content/contact-page/slider/5.jpg" alt="Living room category">
-            <p class="contact-slider__title">
-              Living room furniture
-            </p>
-          </a>
-          <a class="contact-slider__link" href="#">
-            <img class="contact-slider__image" src="images/content/contact-page/slider/6.jpg" alt="Living room category">
-            <p class="contact-slider__title">
-              Living room furniture
-            </p>
-          </a>
-          <a class="contact-slider__link" href="#">
-            <img class="contact-slider__image" src="images/content/contact-page/slider/7.jpg" alt="Dining room category">
-            <p class="contact-slider__title">
-              Dining room furniture
-            </p>
-          </a>
-          <a class="contact-slider__link" href="#">
-            <img class="contact-slider__image" src="images/content/contact-page/slider/8.jpg" alt="Living room category">
-            <p class="contact-slider__title">
-              Living room furniture
-            </p>
-          </a>
-          <a class="contact-slider__link" href="#">
-            <img class="contact-slider__image" src="images/content/contact-page/slider/9.jpg" alt="Chair category">
-            <p class="contact-slider__title">
-              Chair
-            </p>
-          </a>
-          <a class="contact-slider__link" href="#">
-            <img class="contact-slider__image" src="images/content/contact-page/slider/10.jpg" alt="Bedroom category">
-            <p class="contact-slider__title">
-              Bedroom furniture
-            </p>
-          </a>
-          <a class="contact-slider__link" href="#">
-            <img class="contact-slider__image" src="images/content/contact-page/slider/1.jpg" alt="Living room category">
-            <p class="contact-slider__title">
-              Living room furniture
-            </p>
-          </a>
-          <a class="contact-slider__link" href="#">
-            <img class="contact-slider__image" src="images/content/contact-page/slider/2.jpg" alt="Office category">
-            <p class="contact-slider__title">
-              Office furniture
-            </p>
-          </a>
-          <a class="contact-slider__link" href="#">
-            <img class="contact-slider__image" src="images/content/contact-page/slider/3.jpg" alt="Living room category">
-            <p class="contact-slider__title">
-              Living room furniture
-            </p>
-          </a>
-          <a class="contact-slider__link" href="#">
-            <img class="contact-slider__image" src="images/content/contact-page/slider/4.jpg" alt="Kitchen category">
-            <p class="contact-slider__title">
-              Kitchen
-            </p>
-          </a>
-          <a class="contact-slider__link" href="#">
-            <img class="contact-slider__image" src="images/content/contact-page/slider/5.jpg" alt="Living room category">
-            <p class="contact-slider__title">
-              Living room furniture
-            </p>
-          </a>
-          <a class="contact-slider__link" href="#">
-            <img class="contact-slider__image" src="images/content/contact-page/slider/6.jpg" alt="Living room category">
-            <p class="contact-slider__title">
-              Living room furniture
-            </p>
-          </a>
-          <a class="contact-slider__link" href="#">
-            <img class="contact-slider__image" src="images/content/contact-page/slider/7.jpg" alt="Dining room category">
-            <p class="contact-slider__title">
-              Dining room furniture
-            </p>
-          </a>
-          <a class="contact-slider__link" href="#">
-            <img class="contact-slider__image" src="images/content/contact-page/slider/8.jpg" alt="Living room category">
-            <p class="contact-slider__title">
-              Living room furniture
-            </p>
-          </a>
-          <a class="contact-slider__link" href="#">
-            <img class="contact-slider__image" src="images/content/contact-page/slider/9.jpg" alt="Chair category">
-            <p class="contact-slider__title">
-              Chair
-            </p>
-          </a>
-          <a class="contact-slider__link" href="#">
-            <img class="contact-slider__image" src="images/content/contact-page/slider/10.jpg" alt="Bedroom category">
-            <p class="contact-slider__title">
-              Bedroom furniture
-            </p>
-          </a>
+            </a>
+          </div>
+          
         </div>
       </div>
       <!-- === / CONTACT-SLIDER === -->
